2022 updates to 02_intro_to_r..; updated icense and citation info for slides 02-06

--- a/slides/01_intro_and_principles_of_repro.Rmd
+++ b/slides/01_intro_and_principles_of_repro.Rmd
@@ -59,7 +59,7 @@ BibOptions(check.entries = FALSE,
            bib.style = "authoryear",
            cite.style = "authoryear",
            style = "markdown",
-           hyperlink = TRUE,
+           hyperlink = FALSE,
            dashed = FALSE,
            longnamesfirst = FALSE,
            max.names = 2)
