--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -13,6 +13,7 @@
     note = {R package version 0.12},
     url = {https://CRAN.R-project.org/package=xaringan},
   }
+
 @book{Wickham:2015:RP:2904414,
  author = {Wickham, Hadley},
  title = {R Packages},
@@ -21,6 +22,7 @@
  edition = {1st},
  publisher = {O'Reilly Media, Inc.},
 }
+
 @book{Wickham:2017:RDS:3086927,
  author = {Wickham, Hadley and Grolemund, Garrett},
  title = {R for Data Science: Import, Tidy, Transform, Visualize, and Model Data},
@@ -30,7 +32,6 @@
  publisher = {O'Reilly Media, Inc.},
  url = {https://r4ds.had.co.nz/},
 }
-
 
 @MISC{Bryan_Happy_Git,
   title        = "Happy Git and {GitHub} for the useR",
@@ -48,7 +49,7 @@
     isbn = {978-3-319-24277-4},
     url = {https://ggplot2.tidyverse.org},
   }
-  
+
 
 @ARTICLE{Wickham2019-ml,
   title    = "Welcome to the Tidyverse",
@@ -578,7 +579,7 @@
     pages = {1-14},
     abstract = {Background Sexual segregation in vertebrate foraging niche is often associated with sexual size dimorphism (SSD), i.e., ecological sexual dimorphism. Although foraging behavior of male and female seabirds can vary markedly, differences in isotopic (carbon, δ13C and nitrogen, δ15N) foraging niche are generally more pronounced within sexually dimorphic species and during phases when competition for food is greater. We examined ecological sexual dimorphism among sympatric nesting Pygoscelis penguins asking whether environmental variability is associated with differences in male and female pre-breeding foraging niche. We predicted that all Pygoscelis species would forage sex-specifically, and that higher quality winter habitat, i.e., higher or lower sea ice coverage for a given species, would be associated with a more similar foraging niche among the sexes.  Results P2/P8 primers reliably amplified DNA of all species. On average, male Pygoscelis penguins are structurally larger than female conspecifics. However, chinstrap penguins were more sexually dimorphic in culmen and flipper features than Adélie and gentoo penguins. Adélies and gentoos were more sexually dimorphic in body mass than chinstraps. Only male and female chinstraps and gentoos occupied separate δ15N foraging niches. Strong year effects in δ15N signatures were documented for all three species, however, only for Adélies, did yearly variation in δ15N signatures tightly correlate with winter sea ice conditions. There was no evidence that variation in sex-specific foraging niche interacted with yearly winter habitat quality.  Conclusion Chinstraps were most sexually size dimorphic followed by gentoos and Adélies. Pre-breeding sex-specific foraging niche was associated with overall SSD indices across species; male chinstrap and gentoo penguins were enriched in δ15N relative to females. Our results highlight previously unknown trophic pathways that link Pygoscelis penguins with variation in Southern Ocean sea ice suggesting that each sex within a species should respond similarly in pre-breeding trophic foraging to changes in future winter habitat.},
     number = {3},
-    doi = {10.1371/journal.pone.0090081}
+    doi = {10.1371/journal.pone.0090081},
 }
 
 
@@ -601,16 +602,8 @@
   pages    = "114--122",
   month    =  feb,
   year     =  2018,
-  language = "en"
+  language = "en",
 }
-
-  @Manual{caret,
-    title = {caret: Classification and Regression Training},
-    author = {Max Kuhn},
-    year = {2020},
-    note = {R package version 6.0-86},
-    url = {https://CRAN.R-project.org/package=caret},
- }   
 
 @Book{venables_ripley,
     title = {Modern Applied Statistics with S},
@@ -623,7 +616,7 @@
     url = {http://www.stats.ox.ac.uk/pub/MASS4/},
   }
   
-    @Manual{GGally,
+@Manual{GGally,
     title = {GGally: Extension to 'ggplot2'},
     author = {Barret Schloerke and Di Cook and Joseph Larmarange and Francois Briatte and Moritz Marbach and Edwin Thoen and Amos Elberg and Jason Crowley},
     year = {2020},
@@ -656,4 +649,12 @@
     pages = {2472},
     url = {https://doi.org/10.21105/joss.02472},
     doi = {10.21105/joss.02472},
+  }
+
+@Manual{caret,
+    title = {caret: Classification and Regression Training},
+    author = {Max Kuhn},
+    year = {2022},
+    note = {R package version 6.0-93},
+    url = {https://CRAN.R-project.org/package=caret},
   }
