--- a/slides/01_with_survey.Rmd
+++ b/slides/01_with_survey.Rmd
@@ -25,6 +25,14 @@ options(htmltools.dir.version = FALSE)
 ```
 
 ```{r xaringanextra, echo=FALSE}
+# tile view
+xaringanExtra::use_tile_view()
+# share
+xaringanExtra::style_share_again(
+  share_buttons = "all")
+# broadcast: press P to enter the presenter view. Click on the Broadcast button to start broadcasting. Broadcast button will turn into a broadcast link. Share this link with your audience. When they open the link, their browser will connect with yours and from then on, whenever you advance or change slides, your viewer’s slides will move to the current slide.
+# Note that the broadcast link is unique and, as the presenter, is remembered for 4 hours. After 4 hours of inactivity, a new link will be generated..
+xaringanExtra::use_broadcast()
 # scribble, toggle S, note cannot advance sides
 xaringanExtra::use_scribble()
 # copy code
@@ -40,6 +48,8 @@ xaringanExtra::use_extra_styles(
 library(RefManageR)
 library(kableExtra)
 library(tidyverse)
+library(googlesheets4)
+library(showtext)
 library(patchwork)
 ```
 
@@ -56,6 +66,10 @@ BibOptions(check.entries = FALSE,
 myBib <- ReadBib("refs.bib", check = FALSE)
 ```
 
+```{r fonts, include=FALSE}
+font_add_google("Gochi Hand", "Gochi Hand")
+showtext_auto()
+```
 
 <style>
 div.blue { background-color:#b0cdef; border-radius: 5px; padding: 20px;}
@@ -64,7 +78,6 @@ div.grey { background-color:#d3d3d3; border-radius: 0px; padding: 0px;}
 
 
 ---
-
 class: inverse
 
 # Programme Overview
@@ -104,7 +117,6 @@ Chosen topics are: foundational, widely applicable, and transferable conceptuall
 ]
 
 ]
-
 ---
 # Programme overview
 
@@ -170,6 +182,186 @@ Audience: For those with previous experience of R such as having done "Introduct
 
 ]
 
+---
+class: inverse
+
+# What is your previous experience? <br>Survey Results
+
+
+---
+# Survey results 1/3
+
+```{r echo=FALSE}
+# gs4_auth() run interactively
+file <- "https://docs.google.com/spreadsheets/d/11Xx7FLNiure8jF-ti3DNKCj53j3eC8hgMYXA3crvT3I/edit#gid=184416414"
+survey <- read_sheet(file) %>% 
+  filter(Timestamp > "2021-12-31")
+
+```
+The distribution of ratings you (n = `r dim(survey)[1]`) gave in the survey were:
+```{r echo=FALSE, fig.width = 12, fig.height=5}
+r_exp <- survey %>%
+  ggplot(aes(x = `Please rate your expertise in R`)) +
+  geom_bar(fill = "#9d5e78") +
+  scale_x_continuous(name = "Rating",
+                     expand = c(0, 0),
+                     breaks = 1:10,
+                     limits = c(0, 10)) +
+  scale_y_continuous(name = "Number of people",
+                     expand = c(0, 0),
+                     breaks = c(0, 5, 10, 15, 20, 25),
+                     limits = c(0, 30)) +
+  ggtitle("Rate your expertise in R") +
+  theme_classic() +
+  theme(plot.background = element_rect(fill = "#f6fafd"),
+        panel.background = element_rect(fill = "#f6fafd"),
+        plot.title = element_text(size = 35),
+        axis.title = element_text(size = 25),
+        axis.text.x = element_text(size = 25),
+        axis.text.y = element_text(size = 25))
+
+
+
+df <- survey %>% group_by(`Have you experience in any of the following programming languages. Tick all that apply.`) %>%  
+  summarise(count = n())
+lang <- df %>%
+  ggplot(aes(x = reorder(`Have you experience in any of the following programming languages. Tick all that apply.`, count), y = count)) +
+  geom_bar(fill = "#9d5e78", stat = "identity") +
+  scale_x_discrete(name = "") +
+  scale_y_continuous(name = "Number of people",
+                     expand = c(0, 0),
+                     breaks = c(0, 5, 10, 15, 20, 25),
+                     limits = c(0, 30)) +
+  ggtitle("Experience of other langauges") +
+  theme_classic() +
+  theme(plot.background = element_rect(fill = "#f6fafd"),
+        panel.background = element_rect(fill = "#f6fafd"),
+        plot.title = element_text(size = 35),
+        axis.title = element_text(size = 25),
+        axis.text.x = element_text(size = 25),
+        axis.text.y = element_text(size = 25)) +
+  coord_flip()
+
+
+lang_exp <- survey %>%
+  ggplot(aes(x = `Please rate your expertise in the non-R language you consider yourself most competent.`)) +
+  geom_bar(fill = "#9d5e78") +
+  scale_x_continuous(name = "Rating",
+                     expand = c(0, 0),
+                     breaks = 1:10,
+                     limits = c(0, 10)) +
+  scale_y_continuous(name = "Number of people",
+                     expand = c(0, 0),
+                     breaks = c(0, 5, 10, 15, 20, 25),
+                     limits = c(0, 30)) +
+  ggtitle("Rate your expertise in\nnon-R language") +
+  theme_classic() +
+  theme(plot.background = element_rect(fill = "#f6fafd"),
+        panel.background = element_rect(fill = "#f6fafd"),
+        plot.title = element_text(size = 35),
+        axis.title = element_text(size = 25),
+        axis.text.x = element_text(size = 25),
+        axis.text.y = element_text(size = 25))
+
+r_exp + lang + lang_exp &
+  plot_annotation(theme = theme(plot.background = element_rect(fill = "#f6fafd")))
+
+```
+
+---
+# Survey results 2/3
+
+```{r echo=FALSE, fig.width = 12, fig.height=5}
+df <- survey %>% group_by(`In what package/programme are you MOST likely to carry out data analysis and visualisation currently?`) %>%  
+  summarise(count = n())
+data_pkg <- df %>%
+  ggplot(aes(x = reorder(`In what package/programme are you MOST likely to carry out data analysis and visualisation currently?`, count), y = count)) +
+  geom_bar(fill = "#9d5e78", stat = "identity") +
+  scale_x_discrete(name = "") +
+  scale_y_continuous(name = "Number of people",
+                     expand = c(0, 0),
+                     breaks = c(0, 5, 10, 15, 20, 25),
+                     limits = c(0, 30)) +
+  ggtitle("Current Data Analysis package") +
+  theme_classic() +
+  theme(plot.background = element_rect(fill = "#f6fafd"),
+        panel.background = element_rect(fill = "#f6fafd"),
+        plot.title = element_text(size = 35),
+        axis.title = element_text(size = 25),
+        axis.text.x = element_text(size = 25),
+        axis.text.y = element_text(size = 25)) +
+  coord_flip()
+
+
+df <- survey %>% group_by(`In what package/programme are you MOST likely to write up analysis results to submit to a journal or similar?`) %>%  
+  summarise(count = n())
+writing_pkg <- df %>%
+  ggplot(aes(x = reorder(`In what package/programme are you MOST likely to write up analysis results to submit to a journal or similar?`, count), y = count)) +
+  geom_bar(fill = "#9d5e78", stat = "identity") +
+  scale_x_discrete(name = "") +
+  scale_y_continuous(name = "Number of people",
+                     expand = c(0, 0),
+                     breaks = c(0, 10, 20, 30, 40),
+                     limits = c(0, 50)) +
+  ggtitle("Current writing package") +
+  theme_classic() +
+  theme(plot.background = element_rect(fill = "#f6fafd"),
+        panel.background = element_rect(fill = "#f6fafd"),
+        plot.title = element_text(size = 35),
+        axis.title = element_text(size = 25),
+        axis.text.x = element_text(size = 25),
+        axis.text.y = element_text(size = 25)) +
+  coord_flip()
+
+data_pkg + writing_pkg &
+  plot_annotation(theme = theme(plot.background = element_rect(fill = "#f6fafd")))
+```
+
+
+
+---
+# Survey results 3/3
+Please rate your level of comfort with...
+
+```{r echo=FALSE, fig.width = 12, fig.height=7}
+topics <- survey %>%
+   select(starts_with("Please rate your level of comfort with the following in R")) %>%
+   data.frame(.,check.names = FALSE)
+names(topics) <- names(topics) %>%
+  sub(pattern = "Please rate your level of comfort with the following in R \\[*",
+      replacement = "") %>%
+  sub(pattern = "\\]", replacement = "")
+my_levels <- c("Not at all comfortable",
+               "A bit uncomfortable",
+               "Quite comfortable",
+               "Completely comfortable")
+topics1 <- topics %>% 
+#   select(1:8) %>% 
+   pivot_longer(names_to = "Topic",
+                values_to = "Rating",
+                cols = everything())
+topics1$Rating <- factor(topics1$Rating, levels = my_levels)
+topics1 %>% 
+   ggplot(aes(x = Rating)) +
+   geom_bar(fill = "#9d5e78") +
+   scale_x_discrete(name = "") +
+   scale_y_continuous(name = "Number of people",
+                      expand = c(0, 0),
+                      breaks = c(0, 10, 20, 30, 40, 50),
+                      limits = c(0, 55)) +
+    facet_wrap(.~ Topic, nrow = 4,  strip.position = "top",
+              labeller = label_wrap_gen(width = 35)) + 
+   coord_flip() +
+   theme_classic() +
+   theme(axis.title = element_text(size = 20),
+         axis.text.x = element_text(size = 20),
+         axis.text.y = element_text(size = 20),
+         strip.text.x = element_text(size = 20, lineheight = 0.4,
+                                     margin = margin(b = 0)),
+         strip.background = element_rect(fill = "#f6fafd", colour = "#f6fafd"),
+         plot.background = element_rect(fill = "#f6fafd"),
+         panel.background = element_rect(fill = "#f6fafd"))
+```
 
 ---
 class: inverse
